--- a/popup.html
+++ b/popup.html
@@ -48,6 +48,11 @@
     a:hover {
       text-decoration: underline;
     }
+
+    p{
+      padding: 0;
+      margin: 5px;
+    }
   </style>
 </head>
 
@@ -62,6 +67,8 @@
   <p>Use a <a href="https://github.com/openproxyspace/unfx-proxy-checker" target="_blank">proxy checker</a> to verify
     proxies.</p>
   <p class="current-ip">Loading IP...</p>
+  <p class="current-country">Loading Country...</p>
+  <div class="current-ping">Ping: --</div>
 
   <script src="popup.js"></script>
 </body>
